<resources>
    <string name="app_name">LogInregistrationForm</string>
    <string name="tv_welcome">Welcome</string>
    <string name="tv_login">Login to continue</string>
    <string name="etv_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
</resources>
